k8s/odoo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      securityContext:
        fsGroup: 101
      containers:
        - name: odoo
          image: esmosprodacr.azurecr.io/esmos-odoo:v1
          ports:
            - containerPort: 8069
          volumeMounts:
            - name: odoo-filestore
              mountPath: /var/lib/odoo
      volumes:
        - name: odoo-filestore
          persistentVolumeClaim:
            claimName: odoo-filestore-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: production
spec:
  selector:
    app: odoo
  ports:
    - port: 8069
      targetPort: 8069
