k8s/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esmos-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - esmosmeals.app
      secretName: esmosmeals-tls
  rules:
    - host: esmosmeals.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
    - host: moodle.4.144.198.250.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
