k8s/ip-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-redirect
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://esmosmeals.app"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
